alignment issue on add/edit forms date picker

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2624,8 +2624,7 @@ body .menu-mask {
 .release-date {
   border-bottom-left-radius: 4px !important;
   border-top-left-radius: 4px !important;
-  margin: 35px 0;
-  height: 35px;
+  margin: 37px 0;
 }
 .release-date ~ .input-group-btn > .btn {
   height: 34px;
