--- a/app/less/add-form.less
+++ b/app/less/add-form.less
@@ -14,8 +14,7 @@
 
 .release-date {
   .border-left-radius(4px)!important;
-  margin: 35px 0;
-  height: 35px;
+  margin: 37px 0;
 
   ~ .input-group-btn > .btn {
     height: 34px;
